# Paragon

./: .gitignore  CMakeLists.txt  LuaManager.cpp  LuaManager.hpp  combined_source.txt  core.txt  lines.sh
ParagonApp/: CMakeLists.txt  ParagonApplication.cpp  ParagonApplication.hpp  ParagonInit.cpp
ParagonApp/config/: ParagonConfig.cpp  ParagonConfig.hpp
ParagonApp/ecs/ui/: UIComponents.hpp  UIEntityManager.cpp  UIEntityManager.hpp  UISystem.hpp
ParagonApp/event/: ParagonChangeStateEvent.hpp  ParagonEvent.hpp  ParagonEventManager.cpp  ParagonEventManager.hpp  ParagonEventTypeGraph.cpp  ParagonEventTypeGraph.hpp  ParagonStateEvent.hpp
ParagonApp/scene/: EntityManager.cpp  EntityManager.hpp  ParagonScene.cpp  ParagonScene.hpp  ParagonSceneInWorld.cpp  ParagonSceneInWorld.hpp  ParagonSceneIntro.cpp  ParagonSceneIntro.hpp  ParagonSceneLoadingScreen.cpp  ParagonSceneLoadingScreen.hpp  ParagonSceneMainMenu.cpp  ParagonSceneMainMenu.hpp
ParagonApp/scene/component/: UIComponents.hpp
ParagonApp/scene/system/: UISystems.hpp
ParagonApp/state/: ParagonState.cpp  ParagonState.hpp  ParagonStateInWorld.cpp  ParagonStateInWorld.hpp  ParagonStateIntro.cpp  ParagonStateIntro.hpp  ParagonStateLoadingScreen.cpp  ParagonStateLoadingScreen.hpp  ParagonStateMainMenu.cpp  ParagonStateMainMenu.hpp  ParagonStateManager.cpp  ParagonStateManager.hpp
ParagonApp/system/ui/: UIComponent.hpp  UIEntity.hpp  UIEntityManager.cpp  UIEntityManager.hpp  UILuaAPI.cpp  UILuaAPI.hpp  UISystem.hpp
ParagonApp/ui/: UIManager.cpp  UIManager.hpp
ParagonEditorApp/: CMakeLists.txt
common/: Application.hpp  ApplicationScene.hpp  CMakeLists.txt  Component.hpp  Config.hpp  EntityManager.hpp  Event.hpp  EventListener.hpp  EventManager.hpp  EventTypeGraph.cpp  EventTypeGraph.hpp  Singleton.hpp
common/application/: ApplicationScene.cpp
common/asset/: Asset.cpp  Asset.hpp  AssetRegistry.cpp  AssetRegistry.hpp  IAssetRegistry.hpp
common/ecs/: Entity.hpp
config/: graphics.json  meta.json  meta_ParagonApp.json  meta_ParagonEditor.json
core/: CMakeLists.txt  Core.cpp  Core.hpp  Cube.cpp  Cube.hpp  MainWindow.cpp  MainWindow.hpp
core/asset/: Asset.cpp  Asset.hpp  AssetLoader.cpp  AssetLoader.hpp  AssetManager.cpp  AssetManager.hpp  AssetManager_BROKEN_LEGACY.cpp  AssetManager_BROKEN_LEGACY.hpp  AssetRegistry.cpp  AssetRegistry.hpp  AssetRegistryImpl.cpp  AssetRegistryImpl.hpp  AssetScanner.cpp  AssetScanner.hpp  Font.cpp  Font.hpp  Mesh.cpp  Mesh.hpp  MetaConfig.cpp  MetaConfig.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp
core/config/: GraphicsConfig.cpp  GraphicsConfig.hpp  MetaConfig.cpp  MetaConfig.hpp
core/event/: CoreEvent.hpp  CoreEventManager.cpp  CoreEventManager.hpp  CoreEventTypeGraph.cpp  CoreEventTypeGraph.hpp  InputEvent.hpp
core/input/: InputHandler.cpp  InputHandler.hpp  KeyboardListener.cpp  KeyboardListener.hpp  MouseListener.cpp  MouseListener.hpp
core/lua/: LuaManager.cpp  LuaManager.hpp  LuaScript.cpp  LuaScript.hpp
core/render/: Camera.cpp  Camera.hpp  RenderHandler.cpp  RenderHandler.hpp  ShaderHandler.cpp  ShaderHandler.hpp  ShaderManager.cpp  ShaderManager.hpp  TextRenderer.cpp  TextRenderer.hpp
core/resource/: FontResource.cpp  FontResource.hpp  MaterialResource.cpp  MaterialResource.hpp  MeshResource.cpp  MeshResource.hpp  ResourceManager.cpp  ResourceManager.hpp  SFXResource.cpp  SFXResource.hpp  ScriptResource.cpp  ScriptResource.hpp  ShaderResource.cpp  ShaderResource.hpp  TextureResource.cpp  TextureResource.hpp
data/asset/core/shader/: default_shader.vert
data/font/JetBrainsMono/: JetBrains-VariableFont-atlas.json
shaders/: text.frag  text.vert
util/: CMakeLists.txt  Debugger.cpp  Debugger.hpp  FileManager.cpp  FileManager.hpp  Log.cpp  Log.hpp  Math.cpp  Math.hpp
util/file/: FileSystem.cpp  FileSystem.hpp  JSON.cpp  JSON.hpp  nlohmann_json_custom_ext.hpp
util/lua/: Lua.hpp  LuaManager.cpp  LuaManager.hpp  LuaScript.cpp  LuaScript.hpp
